# silicon-rca

./: README.md
silicon-rca/: README.md  pyproject.toml  requirements.txt
silicon-rca/data/demo_fleet/: counters.csv  logs.jsonl
silicon-rca/src/silicon_rca/: __main__.py  cli.py  correlate.py  detect.py  ingest.py  plots.py  rca.py  report.py  simulate.py
silicon-rca/src/silicon_rca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
