[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-rca"
version = "0.1.0"
description = "Post-silicon failure analytics and root-cause framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "rich",
  "typer",
  "pydantic",
  "tabulate",
]

[project.scripts]
silicon-rca = "silicon_rca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
